# curso-si-puj

./: .gitignore  README.md  pyproject.toml  test.ipynb
finales/1-redes-neuronales/: best_model.pth  final_model.pth  main.ipynb  train.py
finales/2-metodos-evolutivos/: 1-feature-selection-ga.ipynb  2-performance-evaluation-ga.ipynb  3-hyperparameter-tuning-pso.ipynb  4-performance-evaluation-pso.ipynb  best_model.pth  best_model_ga.pth  ga_results.json  genetic_feature_selection.py  pso_hyperparameter_tuning.py  train.py
finales/3-razonamiento-incertidumbre/: best_features.json  config.py  discretization.py  experiments.ipynb  implementations.py  main.ipynb  models.py  utils.py
workspace/jrpg/: 0-comparacion-modelos.ipynb  1-modelamiento.ipynb
