[project]
name = "proyecto-sistemas-inteligentes"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.0.0",
    "ipywidgets>=8.0.0",

    # Visualization
    "matplotlib>=3.7.5",
    "seaborn>=0.13.2",
]

[dependency-groups]
rn = [
    # Core
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "fastparquet==2024.11.0",
    "openpyxl>=3.0.0",

    # Machine Learning
    "scikit-learn>=1.6.0",
    "torch==2.8.0",
    "lightgbm>=4.0.0",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128"}
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
