[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "project-si"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pandas",
    "pyarrow",
    "fastparquet",
    "openpyxl",
    "ipykernel",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
]

[dependency-groups]
rn = [

    # Machine Learning
    "scikit-learn>=1.6.0",
    "torch==2.8.0",
    "lightgbm>=4.0.0",
    "torchinfo>=1.8.0",
]

me = [
    "torch==2.8.0",
    "scikit-learn",
    "optuna",
    "deap",
    "optunahub",
    "torchinfo>=1.8.0",
]

ri = [
    "scikit-learn",
    "pgmpy",
    "deap",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128"}
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
